--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio Ricardo Legaspi</title>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon"  href="/web.png" />
   </head>
   <body class="bg-gray-200 text-gray-800 xl:w-full shadow-xl">
     <div id="root" class="min-h-screen"></div>
