--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Portafolio Ricardo Legaspi</title>
     <link rel="icon"  href="/web.png" />
   </head>
-  <body class="bg-gray-200 text-gray-800 xl:w-full shadow-xl">
-    <div id="root" class="min-h-screen"></div>
+  <body class="bg-gray-900 text-white"> <!-- Cambié estas clases -->
+    <div id="root" class="min-h-screen w-full"></div> <!-- Agregué w-full -->
     <script type="module" src="/src/main.tsx" ></script>
   </body>
 </html>
